--- a/3DMath.vcxproj
+++ b/3DMath.vcxproj
@@ -124,10 +124,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="MCMath.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Line.h" />
     <ClInclude Include="MCMath.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
