--- a/3DMath.vcxproj
+++ b/3DMath.vcxproj
@@ -126,11 +126,13 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="MCMath.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Line.h" />
     <ClInclude Include="MCMath.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
