--- a/3DMath.vcxproj
+++ b/3DMath.vcxproj
@@ -125,12 +125,14 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Line.cpp" />
+    <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="MCMath.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="MCMath.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Vector.h" />
